# mlops_demo

./: .gitignore  LICENSE  README.md  __pipeline_dev.ipynb  cloudbuild.yaml  custom_pytest.ini  pyproject.toml  run_tests.sh
cloud-function/: cloudbuild.yaml  main.py
deploy/: deploy_model_pipeline.ipynb
notes/: pipeline_builder.sh  setup.ipynb
notes/tests/: test_components.py
notes/tests/test_data/: data_500.csv  test.csv  train.csv  validation.csv
training/: cloudbuild.yaml  pipeline-dev.ipynb  requirements.txt  setup.py  training-pipeline.json
training/components/: blessed_model.py  bq.yaml  bq_csv.yaml  bq_export.py  data_split.py  stats.py  training.py
training/components/data/: bq_export.py  data_split.py  stats.py
training/components/data/tests/: test_bq_export.py  test_stats.py
training/components/data/tests/artifacts/: html_artifact.html  json_artifact.json  stats.html  stats.json  test_pipeline_using_component_e2e.json
training/components/notifications/: email.py
training/components/training/: algorithms.py  blessed_model.py
training/components/training/tests/: test_training.py
training/pipelines/: compile_pipeline.py  pipeline_runner.sh  run_pipeline.py  training_pipeline.py
training/pipelines/tests/: test_training_pipeline.py
training/pipelines/tests/artefacts/: test_compile_training_pipeline.json  test_run_training_pipeline.json
training/tests/: readme.md  run_tests.sh
training/tests/artifacts/: html_artifact.html  model.pkl  report
training/tests/artifacts/stats_artifact/: af.proto
(+5 files in other folders)
